--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,27 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link
+  href="assets/css/gantt/sch-gantt-all.css"
+  rel="stylesheet"
+  type="text/css"
+/>
+<link
+  href="assets/css/gantt/app.css"
+  rel="stylesheet"
+  type="text/css"
+/>
+<link
+  href="assets/css/scheduler/theme-triton-all.css?v=6.6.0"
+  rel="stylesheet"
+  type="text/css"
+/>
+<link
+  href="assets/css/scheduler/sch-triton-all.css?v=6.6.0"
+  rel="stylesheet"
+  type="text/css"
+/>
 </head>
 <body>
   <app-root></app-root>
